# HumanRegex

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  update_changelog.py  update_name.py  update_version.py
src/humanregex/: __init__.py  core.py
tests/: test_core.py
